# create-dlthub-workspace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PR.md  README.md  pyproject.toml
.github/workflows/: ci.yml
my-new-workspace/: pyproject.toml
my-new-workspace/.claude/rules/: data-exploration-workflow.md  dlthub-runtime-workflow.md
my-new-workspace/.claude/skills/deploy-workspace/: SKILL.md
my-new-workspace/.dlt/: .toolkits
my-new-workspace/notebooks/: starter_transformations_notebook.py
my-workspace/: .gitignore  __deployment__.py  pyproject.toml
my-workspace/.claude/rules/: rest-api-pipeline-workflow.md  transformations-workflow.md
my-workspace/.claude/skills/deploy-workspace/: advanced-patterns.md
my-workspace/.claude/skills/find-source/: SKILL.md
my-workspace/.dlt/: .toolkits
my-workspace/notebooks/: starter_runs_notebook.py
scripts/: generate_ai.py
src/create_dlthub_workspace/: __init__.py  __main__.py  cli.py  config.py  display.py  dlt_ai.py  errors.py  plan.py  project_metadata.py  prompts.py  scaffold.py  strings.py  ui.py  uv.py
src/create_dlthub_workspace/scaffolds/minimal_workspace/: AGENTS.md  __deployment__.py  pipeline.py  pyproject.toml
src/create_dlthub_workspace/scaffolds/minimal_workspace/.agents/skills/adjust-table/: SKILL.md
src/create_dlthub_workspace/scaffolds/minimal_workspace/.agents/skills/build-notebook/: SKILL.md
src/create_dlthub_workspace/scaffolds/minimal_workspace/.agents/skills/data-exploration-workflow/: SKILL.md
src/create_dlthub_workspace/scaffolds/minimal_workspace/.agents/skills/deploy-workspace/: scheduling-triggers.md
src/create_dlthub_workspace/scaffolds/minimal_workspace/.agents/skills/dlthub-runtime-workflow/: SKILL.md
src/create_dlthub_workspace/scaffolds/minimal_workspace/.agents/skills/generate-cdm/: SKILL.md
src/create_dlthub_workspace/scaffolds/minimal_workspace/.claude/rules/: init-dlthub-workspace.md
src/create_dlthub_workspace/scaffolds/minimal_workspace/.cursor/rules/: init-dlthub-workspace.mdc
src/create_dlthub_workspace/scaffolds/minimal_workspace/.dlt/: .toolkits
src/create_dlthub_workspace/scaffolds/starter_workspace/: AGENTS.md  __deployment__.py  pyproject.toml  starter_data_quality.py  starter_data_quality_notebook.py  starter_pipeline.py  starter_report.py  starter_transformations.py
src/create_dlthub_workspace/scaffolds/starter_workspace/.agents/skills/debug-deployment/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.agents/skills/debug-pipeline/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.agents/skills/define-data-quality-checks/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.agents/skills/dlthub-runtime-profiles/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.agents/skills/rest-api-pipeline-workflow/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.agents/skills/transformations-workflow/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.agents/skills/validate-data/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.claude/skills/annotate-sources/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.claude/skills/create-transformation/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.claude/skills/data-quality-workflow/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.claude/skills/debug-deployment/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.claude/skills/review-data-quality/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.claude/skills/run-data-quality/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.claude/skills/sql-database-pipeline-workflow/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.cursor/skills/create-filesystem-pipeline/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.cursor/skills/create-sql-database-pipeline/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.cursor/skills/dlthub-platform-profiles/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.cursor/skills/dlthub-platform-workflow/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.cursor/skills/filesystem-pipeline-workflow/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.cursor/skills/rest-api-pipeline-workflow/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.cursor/skills/setup-runtime/: SKILL.md
src/create_dlthub_workspace/scaffolds/starter_workspace/.dlt/: .toolkits  prod.config.toml  prod.secrets.toml
src/create_dlthub_workspace/scaffolds/starter_workspace/notebooks/: starter_data_quality_notebook.py  starter_runs_notebook.py  starter_transformations_notebook.py
tests/: test_cli.py  test_display.py  test_dlt_ai.py  test_plan.py  test_project_metadata.py  test_prompts.py  test_scaffold.py  test_uv.py
tests_integration/: helpers.py  test_e2e_workspace.py
(+19 files in other folders)
