[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create-dlthub-workspace"
version = "0.1.0"
description = "Scaffold a dltHub workspace from the official starter project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "dltHub" },
]
dependencies = [
  "rich>=13.7",
  "beaupy>=3.9",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

[project.scripts]
create-dlthub-workspace = "create_dlthub_workspace.cli:main"
create-dlthub-project = "create_dlthub_workspace.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/create_dlthub_workspace"]
