[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create-dlthub-workspace"
version = "0.1.0"
description = "Scaffold a dltHub workspace from the official starter project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "dltHub" },
]
dependencies = [
  "rich>=13.7",
  "beaupy>=3.9",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["PLC0415"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
strict_optional = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
namespace_packages = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "beaupy.*"
ignore_missing_imports = true

[project.scripts]
create-dlthub-workspace = "create_dlthub_workspace.cli:main"
create-dlthub-project = "create_dlthub_workspace.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/create_dlthub_workspace"]
