[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlthub-start"
version = "0.2.0"
description = "Scaffold a dltHub workspace from the official starter project."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "dltHub" },
]
classifiers = [
  "Development Status :: 4 - Beta",
]
dependencies = [
  "rich>=13.7",
  "beaupy>=3.9",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["src/create_dlthub_workspace/scaffolds"]

[tool.ruff.lint]
extend-select = ["PLC0415"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
strict_optional = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
namespace_packages = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests", "tests_integration", "scripts"]
exclude = ["src/create_dlthub_workspace/scaffolds"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests_integration.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "beaupy.*"
ignore_missing_imports = true

# `tomli` is only installed on Python <3.11 (we fall back to stdlib `tomllib`
# on >=3.11), so it's absent from the dev env when running on newer pythons.
# Suppress missing-stub errors there; the runtime path is short and stable.
[[tool.mypy.overrides]]
module = "tomli"
ignore_missing_imports = true

[project.scripts]
dlthub-start = "create_dlthub_workspace.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/create_dlthub_workspace"]
