[project]
name = "dlthub-starter-workspace"
version = "0.1.0"
description = "Starter dltHub workspace with runnable examples"
requires-python = ">=3.12"
dependencies = [
    "dlt[hub, workspace]>=1.17.0",
    "duckdb<1.4.3",
    "altair>=6.0.0",
    "ibis-framework>=12.0.0",
    "marimo>=0.19.0",
    "pyarrow>=24.0.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
]

[tool.uv.sources]
